--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="near_you">NEAR YOU</string>
     <string name="settings">SETTINGS</string>
     <string name="gaia">THE GAIA TRAVEL APP</string>
+    <string name="map_api_key">AIzaSyAPZEvMfzINGWYuS-fILtQJygH4kr7l3b8</string>
 </resources>
