--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="top_places">TOP PLACES</string>
     <string name="map">MAP</string>
     <string name="discover">DISCOVER</string>
-    <string name="near_you">NEAR YOU</string>
     <string name="settings">SETTINGS</string>
     <string name="gaia">THE GAIA TRAVEL APP</string>
+    <string name="places">PLACES</string>
 </resources>
